# Learning-Notes

./: .gitignore  .gitmodules  README.md  config.xml  xmlread.py
c++/: .clang-format  .clang_format  CMakeLists.txt  CMakeLists.txt.in  config  format_code
c++/app/: .clang-format  CMakeLists.txt  format_code  hashutils.h  httpclient.h  main.cpp
c++/app/include/: xmtdef.h
c++/app/unittest/: unit_tconf.cpp  unit_tstring.cpp
c++/argparse/: argparse.hpp  cmdline.hpp  unitargparse.cpp
c++/backend/: daemon.cpp
c++/base/: Ascii.h  Backtrace.cpp  Backtrace.h  CMakeLists.txt  Cofigure.cpp  Condition.cpp  Condition.h  Configure.cpp  Configure.h  Conv.cpp  Conv.h  CountDownLatch.cpp  CountDownLatch.h  Date.h  DirScanner.cpp  DirScanner.h  Dll.cpp  Dll.h  Exception.h  File.cpp  File.h  Format.h  Likely.h  LogHandle.cpp  LogHandle.h  Logging.cpp  Logging.h  Mutex.cpp  Mutex.h  ObjPool.h  Object.h  Os.h  ProcInfo.cpp  ProcInfo.h  Range.h  StreamBase.h  StringUtil.cpp  StringUtil.h  System.h  Thread.cpp  (+11 more)
c++/base/argparse/: cmdline.h  unitargparse.cpp
c++/base/checksum/: checksum.cpp  checksum.h
c++/base/crypto/: base64.cpp  base64.h
c++/base/fsm/: fsm_configuration.h  fsm_context.h  fsm_logger.h  fsm_manager.h  fsm_stateconfigure.h  fsm_statemachine.h
c++/base/json/: json.cpp  json.h
c++/base/stream/: BinaryStream.cpp  BinaryStream.h  CompressStream.cpp  CompressStream.h  StreamBase.cpp  StreamBase.h  ZlibStream.h
c++/base/test/: CMakeLists.txt  Makefile  test_file.cpp  test_logging.cpp  test_range.cpp  test_thread.cpp  test_threadpool.cpp  test_timestamp.cpp
c++/cmake/: cxx_compile_flags.cmake  find_gtest.cmake  project_init.cmake
c++/conf/: Makefile  configure.cpp  configure.h  configure.hpp  test.cf  unitconf  unitconf.cpp
c++/cpp12306/: Makefile  unitTicketQuery.cpp
c++/db/: CMakeLists.txt  DbHelper.h  Makefile  leveldb_cli.cpp  leveldb_cli.h  leveldb_client.cpp  leveldbcli.cpp  leveldbcli.h  leveldbclient.cpp  mysql_cli.cpp  mysql_cli.h  mysql_client.cpp  mysql_client.h  redis_cli.cpp  redis_cli.h  sql_prepare_statement.h  sqlite_cli.cpp  sqlite_cli.h  sqlite_client.cpp  sqlite_client.h  sqlitecli.cpp  sqlitecli.h  sqliteclient.cpp
c++/db/tests/: test_leveldbclient.cpp  test_sqliteclient.cpp
c++/hash/: Makefile  base64.cpp  base64.h  hashutils.hpp  result.txt  test.br  unitHash.cpp
c++/http/: Makefile  httpclient.hpp  unitHttpClient.cpp  url
c++/httpclient/: Makefile  config.h  httpclient  httpclient.cpp  httpclient.h  httpclient.hpp  unitHttpClient.cpp
c++/httpclient/tests/: unitHttpClient.cpp
c++/httpserver/: Makefile  httpconfig.cpp  httpconfig.h  httplog.h  httprequest.cpp  httprequest.h  httpresponse.cpp  httpresponse.h  httpserver  httpserver.cpp  httpserver.h  httputils.cpp  httputils.h  test.cpp  unitHttpServer.cpp
c++/httpserver/conf/: httpd.conf
c++/httpserver/html/: 40x.html  basicauth  dirHtml.tmpl  httpd.conf
c++/httpserver/src/: Makefile  httpconfig.cpp  httpconfig.h  httplog.h  httprequest.cpp  httpresponse.cpp  httpresponse.h  httpserver.cpp  httputils.cpp  httputils.h  unitHttpServer.cpp
c++/httpserver/ssl/: hp.dev.crt  hp.dev.key  rootCA.key  rootCA.pem  rootCA.srl  server.csr  server.csr.cnf  v3.ext
c++/httpserver/tests/: client.rest  unitHttpServer.cpp
c++/json/: json.cpp  json.hpp  test_json.cpp
c++/leetcode/: leetcode_14.cpp
c++/log/: log.cpp  log.h  logging.cpp  logging.h  unitLog.cpp  unitlog
c++/mail/: Makefile  mailconfig.cpp  mailconfig.h  mailcontext.h  mailenv.cpp  mailenv.h  mailserver  mailserver.cpp  mailserver.h  mailutils.hpp  programs.cf  unitMailServer.cpp
c++/net/: Acceptor.cpp  Acceptor.h  Buffer.cc  Buffer.cpp  Buffer.h  CMakeLists.txt  Callback.h  Channel.cpp  Channel.h  Connection.h  CurrentThread.cpp  CurrentThread.h  Endian.h  EventLoop.cpp  EventLoop.h  EventLoopThread.cpp  EventLoopThread.h  EventLoopThreadPool.cpp  EventLoopThreadPool.h  InetAddress.cpp  InetAddress.h  Poller.cpp  Poller.h  Socket.cpp  Socket.h  SocketsOP.h  SocketsOp.cpp  SocketsOp.h  TcpClient.cpp  TcpClient.h  TcpConnection.cpp  TcpConnection.h  TcpServer.cpp  TcpServer.h  Uri.cpp  Uri.h  ZlibStream.h  socket.hpp
c++/net/http/: CMakeLists.txt  CtlScanner.cpp  CtlScanner.h  HttpClient.h  HttpConfig.cpp  HttpConfig.h  HttpContext.cpp  HttpContext.h  HttpControllMng.h  HttpLog.cpp  HttpLog.h  HttpParttern.cpp  HttpParttern.h  HttpPattern.cpp  HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h  HttpServer.cpp  HttpServer.h  HttpUtils.cpp  HttpUtils.h  main_server.cpp
c++/net/mail/: CMakeLists.txt  MailCommon.h  Makefile  mail_common.h  mail_context.h  mail_env.cpp  mail_env.h  mail_process.cpp  mail_process.h  mail_utils.h  mailenv.cpp  mailenv.h  mailserver.cpp  mailserver.h  unitMailServer.cpp
c++/net/poller/: EPollPoller.cpp  EPollPoller.h  PollPoller.cpp  PollPoller.h
c++/net/rpc/: CMakeLists.txt  RpcServer.cpp  RpcServer.h  main_server.cpp
c++/net/test/: CMakeLists.txt  Makefile  testBuffer.cc  test_poller.cpp
c++/shell_server/: shell_server.h
c++/test/: CMakeLists.txt  main.cpp  unitmain.cpp
c++/test/base/: CMakeLists.txt  test_checksum.cpp  test_crypto.cpp  test_file.cpp  test_logging.cpp  test_range.cpp  test_stream.cpp  test_thread.cpp  test_threadpool.cpp  test_timer.cpp  test_timestamp.cpp
c++/test/db/: CMakeLists.txt  test_leveldb.cpp  test_mysql.cpp  test_redis.cpp  test_sqlite.cpp
c++/test/net/: CMakeLists.txt  test_poller.cpp  test_tcpclient.cpp  test_uri.cpp  test_zlib.cpp
c++/threadpool/: threadpool.cpp  threadpool.h
c++/tldextract/: Makefile  base64.cpp  base64.h  hashutils.hpp  httpclient.hpp  logging.cpp  logging.h  mutithread  mutithread.cpp  test_gzip.cpp  tldextract  tldextract.cpp  tldextract.h  unitHttpClient.cpp  unitTldExtract.cpp
funny/fastpro/: CMakeLists.txt
funny/fastpro/mxt/: .clang-format  Makefile  Makefile.linux
ssp/: .clang-format  CMakeLists.txt
ssp/cmake/: cxx_compile_flags.cmake  project_init.cmake
ssp/cmake/modules/: Findjsonc.cmake  Findopenssl.cmake
ssp/source/: CMakeLists.txt
ssp/test/: CMakeLists.txt  main.cpp
(+297 files in other folders)
