cmake_minimum_required(VERSION 3.13.0)
project(muduo_base_tools VERSION 1.0.0)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED true)

option(BUILD_TESTS "Enable GoogleTesting " ON)
option(BUILD_ASAN "Enable Asan memory detector" OFF)

include(cmake/project_init.cmake)
include(cmake/cxx_compile_flags.cmake)
include_directories(${PROJECT_SOURCE_DIR})
if(BUILD_TESTS)
  enable_testing()
  add_subdirectory("third_party/googletest")
  include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
  add_subdirectory(test)
endif()
add_subdirectory(base)
add_subdirectory(net)
add_subdirectory(db)